fixed subcell width collapsing to zero

--- a/src/components/CalendarView.module.scss
+++ b/src/components/CalendarView.module.scss
@@ -38,7 +38,7 @@
 
 		.Subcell {
 			flex: 1;
-			
+			width: 100%;
 			&.Active {
 				background-color: magenta;
 			}
